# AW3225QF-ambilight

./: CMakeLists.txt  README.md  hid_debug.cpp  led_demo.cpp  main.cpp
.github/workflows/: security_patch.yml
